tests/errors/dim_float_03.f90
program main
	print *, sum([1, 2, 3], .true., 1.1)
end program